--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -6,6 +6,7 @@
 body {
   background: "white";
   color: black;
+  font-family: var(--font-lato);
 }
 
 @theme inline {
@@ -79,6 +80,7 @@ body {
   --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
   --sidebar-border: oklch(0.92 0.004 286.32);
   --sidebar-ring: oklch(0.705 0.015 286.067);
+  --lato: var(--font-lato);
 }
 
 .dark {
